# Cidepint

./: .gitignore  README.md  main.py  vercel.json
admin/: .pre-commit-config.yaml  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
admin/src/core/: crypto.py  database.py  email.py
admin/src/dbo/: configuration_dbo.py  inst_service_dbo.py  inst_user_role_dbo.py  institution_dbo.py  operation_dbo.py  permission_dbo.py  role_dbo.py  service_dbo.py  service_request_dbo.py  simple_user_dbo.py  user_dbo.py
admin/src/models/: configuration.py  enums.py  institution.py  institution_service.py  institution_user_role.py  operation.py  permission.py  request_note.py  role.py  service.py  service_request.py  simple_user.py  user.py
admin/src/schemas/: institution_schema.py  request_schema.py  service_schema.py  user_schema.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: __init__.py  auth.py  configuration.py  errors.py  home.py  inst_user_role.py  institution.py  service.py  service_request.py  simple_user.py  user.py
admin/src/web/controllers/api/: api_analisis.py  api_auth.py  api_institutions.py  (+3 more)
admin/src/web/static/: layout.css
admin/src/web/templates/: 404.html  confirm.html  errorlayout.html  home.html  layout.html  login.html  register.html
admin/src/web/utils/: api.py  auth.py  compiler.py  jwt.py  model.py  navigation.py  oauth.py  seed_helper.py  session.py
admin/static/css/: errorlayout.css  home.css  layout.css
admin/static/css/tailwind/: output.css
admin/tests/: test_web.py
(+49 files in other folders)
